# spasylki-az

./: .envrc  .gitignore  .pre-commit-config.yaml  Dockerfile  README.adoc  noxfile.py  pyproject.toml  requirements.txt
src/spasylki_az/: main.py
src/spasylki_az/data/: links.py
src/spasylki_az/templates/: index.jinja2
